<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celadon_blue"
    android:backgroundTint="@color/celadon_blue"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/HostTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/prussian_blue"
        android:backgroundTint="@color/prussian_blue"
        android:orientation="horizontal"
        android:padding="@dimen/exit_app_alert_dialog_padding">

        <ImageView
            android:layout_width="@dimen/exit_app_alert_dialog_icon_width"
            android:layout_height="@dimen/exit_app_alert_dialog_icon_height"
            android:src="@drawable/exit_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/exit_app_alert_dialog_margin"
            android:gravity="center_vertical"
            android:text="@string/exit"
            android:textSize="@dimen/exit_app_alert_dialog_title_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/exit_app_alert_dialog_margin"
        android:layout_marginVertical="@dimen/exit_app_alert_dialog_tv_margin_vertical"
        android:text="@string/do_you_really_want_to_exit"
        android:textAlignment="center"
        android:textSize="@dimen/exit_app_alert_dialog_msg_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/exit_app_alert_dialog_padding"
        android:paddingBottom="@dimen/exit_app_alert_dialog_padding">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/exit_app_alert_dialog_btn_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/prussian_blue"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/exit_app_alert_dialog_btn_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/imperial_red"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>