<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/intro_padding_horizontal"
    android:paddingBottom="@dimen/intro_padding_bottom"
    tools:context=".activities.IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/intro_view_pager_margin_bottom" />

    <LinearLayout
        android:id="@+id/dotsContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/intro_dots_container_height"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/imperial_red"
        android:text="@string/next" />

    <Button
        android:id="@+id/btnGotIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/imperial_red"
        android:text="@string/got_it"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/celadon_blue"
        android:text="@string/skip" />

</RelativeLayout>